[package]
name = "chainlink_twap_validator_runner"
version = "0.1.0"
edition = "2021"

[dependencies]
hdp = { git = "https://github.com/HerodotusDev/hdp-cairo.git" }
tokio = { version = "1.34.0", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
progress_bars = ["hdp/progress_bars"]